Fix search bar typing and text on Safari

--- a/app/assets/stylesheets/components/search.scss
+++ b/app/assets/stylesheets/components/search.scss
@@ -24,6 +24,7 @@
 
 .search-bar-logged-in {
     font-size: 14px;
+    height: 15px;
 }
 
 .search-bar, .search-bar-logged-in {
